# Cargo.toml

[package]
name = "cczuni-swift-bridge"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = {version = "0.1",features = ["async"]}
cczuni = { path = "cczuni", default-features = false, features = [
    "calendar",
    "internals",
    "rustls-tls",
] }

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
# debug= "full" # for easier debugging 
debug = "none" # for smaller binary size
lto = true                  # reduces binary size by ~14%
# opt-level = "s"             # reduces binary size by ~25%
opt-level = "z"             # reduces binary size by ~30%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

[profile.bench]
codegen-units = 16          # Make compiling criterion faster (16 is the default, but profile.release sets it to 1)
lto = "thin"                # Similarly, speed up linking by a ton